[gd_scene load_steps=5 format=3 uid="uid://dsy30kwg16tcw"]

[ext_resource type="Script" uid="uid://c1s6r2e4csnak" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[sub_resource type="Theme" id="Theme_vue75"]
Button/font_sizes/font_size = 24
Label/font_sizes/font_size = 26
LineEdit/font_sizes/font_size = 22
VBoxContainer/constants/separation = 20

[sub_resource type="Gradient" id="Gradient_vue75"]
colors = PackedColorArray(0.16, 0.16, 0.16, 1, 0.40495878, 0.295692, 0.39123702, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l6cm7"]
gradient = SubResource("Gradient_vue75")
fill_from = Vector2(0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vue75")
script = ExtResource("1_l6cm7")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_l6cm7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -144.0
offset_right = 384.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "W Mine and Building Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SingleplayerButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Singleplayer"

[node name="HostMultButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer Host	"

[node name="JustMultButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer Join"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter IP Adress to join"
alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/SingleplayerButton" to="." method="_singleplayer_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HostMultButton" to="." method="_host_mult_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/JustMultButton" to="." method="_join_mult_pressed"]
